--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-LOGIN=kacztex
-PASSWORD=kacztex123
-MONGODB_URI=mongodb+srv://local:dawidrw123@cluster0-ehgqo.mongodb.net/test?authSource=admin&replicaSet=Cluster0-shard-0&w=majority&readPreference=primary&appname=MongoDB%20Compass%20Community&retryWrites=true&ssl=true
+LOGIN=admin
+PASSWORD=password
+MONGODB_URI=mongodb+srv://dawidrw123:dawidrw123@cluster0.7shvp.mongodb.net/demo-ochronne-maski?retryWrites=true&w=majority
+
 ADMIN_KEY=eyJrIjoiT0tTcG1pUlY2RnVKZTFVaDFsNFZXdE9ZWmNrMkZYbk
